--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -83,7 +83,8 @@
                                 <li><a href="{% url 'delivery-customer-list' %}">Customer List</a></li>
                             </ul>
                         </li>
-                        <li><a href="{% url 'delivery-order-history' %}">Orders</a></li>
+                        <li><a href="{% url 'confirm_delivery' %}">Orders</a></li>
+                        <li><a href="{% url 'map' %}">MAP</a></li>
                     </ul>
                 </nav>
     </div>
