--- a/Ration1/templates/Delivery/change_password.html
+++ b/Ration1/templates/Delivery/change_password.html
@@ -1,4 +1,4 @@
-{% extends 'Delivery/index.html' %}
+{% extends 'Delivery/base.html' %}
 {% block content %}
     <h1>Change Password</h1>
     <form method="post">
