--- a/Ration1/templates/admin/base.html
+++ b/Ration1/templates/admin/base.html
@@ -270,6 +270,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'delivery_boys_history' %}">Delivery boys</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'deleted_delivery_boys' %}">deleted delivery</a>
+            </li>
             </ul>
         </ul>
     </nav>
