--- a/Ration1/templates/Delivery/index.html
+++ b/Ration1/templates/Delivery/index.html
@@ -19,7 +19,7 @@ alert("{{ message }}")
                     <ul>
                         <li><a href="/Delivery">Home</a></li>
                         <li><a href="{% url 'delivery-customer-list' %}">Customers</a></li>
-                        <li><a href="{% url 'delivery-order-history' %}">Orders</a></li>
+                        <li><a href="{% url 'delivery_orders' %}">Orders</a></li>
                     </ul>
                 </div>
             </div>
