--- a/Ration1/templates/customer/products_list.html
+++ b/Ration1/templates/customer/products_list.html
@@ -11,38 +11,42 @@
         <div class="col">
             <div id="page-inner">
                 <h2>Products List</h2>
-                {% regroup view_pp by card.card as card_list %} <!-- Grouping products by card -->
-                {% for card in card_list %}
-                <div class="col"> <!-- Adjust the column size based on your layout -->
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <h2>{{ card.grouper }}</h2> <!-- Displaying card name as heading -->
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                {% for item in card.list %}
-                                <div class="col-lg-3 col-md-4 col-6 mb-4"> <!-- Adjust the column size based on your layout -->
-                                    <div class="card product-card"> <!-- Add the "product-card" class here -->
-                                        {% if item.item.image %}
-                                            <img src="{{ item.item.image }}" style="width: 100%; height: 200px; object-fit: cover;" class="card-img-top product-image" alt="Product Image">
-                                        {% else %}
-                                            <p class="no-image-text">No image available</p>
-                                        {% endif %}
-                                        <div class="card-body">
-                                            <p class="product-name">{{ item.item.item }}</p>
-                                            <p>{{ item.arrived }}</p>
-                                            <p>Max:{{ item.quantity }} kg (lt)</p>
-                                            <p>{{ item.amount }} /-</p>
-                                            <a href="/customer/CartView/{{ item.id }}/" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
+                {% if view_pp %}
+                    {% regroup view_pp by card.card as card_list %}
+                    {% for card in card_list %}
+                    <div class="col">
+                        <div class="card mb-3">
+                            <div class="card-header">
+                                <h2>{{ card.grouper }}</h2>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    {% for item in card.list %}
+                                    <div class="col-lg-3 col-md-4 col-6 mb-4">
+                                        <div class="card product-card">
+                                            {% if item.item.image %}
+                                                <img src="{{ item.item.image }}" style="width: 100%; height: 200px; object-fit: cover;" class="card-img-top product-image" alt="Product Image">
+                                            {% else %}
+                                                <p class="no-image-text">No image available</p>
+                                            {% endif %}
+                                            <div class="card-body">
+                                                <p class="product-name">{{ item.item.item }}</p>
+                                                <p>{{ item.arrived }}</p>
+                                                <p>Max:{{ item.quantity }} kg (lt)</p>
+                                                <p>{{ item.amount }} /-</p>
+                                                <a href="/customer/CartView/{{ item.id }}/" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add to Cart</a>
+                                            </div>
                                         </div>
                                     </div>
+                                    {% endfor %}
                                 </div>
-                                {% endfor %}
                             </div>
                         </div>
                     </div>
-                </div>
-                {% endfor %}
+                    {% endfor %}
+                {% else %}
+                    <p>No items available</p>
+                {% endif %}
             </div>
         </div>
     </div>
