--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -81,7 +81,7 @@
                         <li><a href="#">customers</a>
                             <ul class="header__menu__dropdown">
                                 <li><a href="{% url 'delivery-customer-list' %}">Customer List</a></li>
-                                <li><a href="{% url 'delivery_process' order.id %}">DleiveryProcess</a></li>
+                                {% comment %} <li><a href="{% url 'delivery_process' order.id %}">DeliveryProcess</a></li> {% endcomment %}
                             </ul>
                         </li>
                         <li><a href="{% url 'delivery_orders' %}">Delivery Orders</a></li>
