--- a/Ration1/templates/customer/cardowner.html
+++ b/Ration1/templates/customer/cardowner.html
@@ -1,64 +1,82 @@
 {% extends 'customer/base.html' %}
 {% load static %}
-{% block content %} 
+
+{% block content %}
 {% if message %}
 <script>
-alert("{{ message }}")
+    alert("{{ message }}");
 </script>
 {% endif %}
-    <!-- slider_area_start -->
-    <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-xl-8">
-                        <div class="slider_text text-center justify-content-center">
-                            {% comment %} <p>user</p> {% endcomment %}
-                            <h3>CUSTOMER PAGE</h3>
-                                <a class="boxed-btn3" href="#">Our Services</a>
-                        </div>
+
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-20">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h3 class="text-center">Owner Details</h3>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-striped table-hover">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Customer</th>
+                                    <th scope="col">Ration Card Number</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Contact Number</th>
+                                    <th scope="col">Address</th>
+                                    <th scope="col">Location</th>
+                                    <th scope="col">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for i in custom %}
+                                <tr>
+                                    <td>{{ i.user.first_name }}</td>
+                                    <td>{{ i.card_number }}</td>
+                                    <td>{{ i.user.email }}</td>
+                                    <td>{{ i.contact }}</td>
+                                    <td>{{ i.address }}</td>
+                                    <td>{{ i.location }}</td>
+                                    <td>
+                                        <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#customerDetailsModal{{ i.user.id }}">
+                                            View Details
+                                        </button>
+                                    </td>
+                                </tr>
+                                <!-- Modal -->
+                                <div class="modal fade" id="customerDetailsModal{{ i.user.id }}" tabindex="-1" role="dialog" aria-labelledby="customerDetailsModalLabel{{ i.user.id }}" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header bg-primary text-white">
+                                                <h5 class="modal-title" id="customerDetailsModalLabel{{ i.user.id }}">Customer Details</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p><strong>Name:</strong> {{ i.user.first_name }}</p>
+                                                <p><strong>Ration Card Number:</strong> {{ i.card_number }}</p>
+                                                <p><strong>Email:</strong> {{ i.user.email }}</p>
+                                                <p><strong>Contact Number:</strong> {{ i.contact }}</p>
+                                                <p><strong>Address:</strong> {{ i.address }}</p>
+                                                <p><strong>Location:</strong> {{ i.location }}</p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                <!-- Add more action buttons here -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- slider_area_end -->
-    <br>
-    <br>
-    <div class="col-xl-12">
-        <div id="page-inner" >
-            <h1>Owner Details</h1>
-                <table class="table table-bordered table-striped table-hover">
-            
-                    <th class="info">Customer</th>
-                    <th class="info">Ration Card Number</th>
-                    <th class="info">Email</th>
-                    <th class="info">Contact Number</th>
-                    <th class="info">Address</th>
-                    <th class="info">Location</th>
-                    {% comment %} <th class="info">Total members</th> {% endcomment %}
-                    {% comment %} <th class="info">Approve</th> {% endcomment %}
-                    
-                    {% comment %} <th class="info">Reject</th> {% endcomment %}
-            {% for i in custom  %}
-            
-            <tr>
-                
-                <td>{{ i.user.first_name}}</td>
-                <td>{{ i.card_number }}
-                <td>{{ i.user.email}}</td>
-                <td>{{ i.contact}}</td>
-                <td>{{ i.address}}</td>
-                <td>{{ i.location}}</td>               
-                {% comment %} <td><a href="approve?id={{ i.user_id}}" class=" btn btn-success">Add</a></td> {% endcomment %}
-                {% comment %} <td><a href="reject?id={{ i.user_id}}" class=" btn btn-danger">Reject</a></td> {% endcomment %}
-                
-            </tr>
-            
-                {% endfor %}
-            </table>
-        </div>
-    </div>
-    
-    {% endblock  %}
-    
+</div>
+
+{% endblock %}
