--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -83,8 +83,9 @@
                     <ul>
                         <li class="active"><a href="/Delivery">Home</a></li>
                         <li><a href="{% url 'delivery_orders' %}">Pending Delivery</a></li>
-                        <li><a href="{% url 'picked_orders' %}">My Delivery</a></li>
+                        <li><a href="{% url 'delivery_notification' %}">My Delivery</a></li>
                         <li><a href="{% url 'map' %}">MAP</a></li>
+                        <li><a href="{% url 'delivery_history' %}">Histroy</a></li>
                     </ul>
                 </nav>
     </div>
