--- a/Ration1/templates/Delivery/delivery_orders.html
+++ b/Ration1/templates/Delivery/delivery_orders.html
@@ -32,7 +32,7 @@
     }
 </style>
 <div class="col-md-12 text-center">
-    <h3 class="animate-charcter"> Total Orders Received: {{ total_orders_received }}</h3>
+    <h3 class="animate-charcter"> Total Orders Received: {{ total_delivery_codes   }}</h3>
 </div>
 <div class="container mt-5">
     <h3>Delivery Assignments</h3>
