--- a/Ration1/templates/customer/base.html
+++ b/Ration1/templates/customer/base.html
@@ -146,9 +146,9 @@
                                 <li><a href="cardowner">Owner Details</a></li>
                             </ul>
                         </li>
+                        <li><a href="products_list">Shop</a></li>
                         <li><a href="#">Ration</a>
                             <ul class="header__menu__dropdown">
-                                <li><a href="products_list">products</a></li>
                                 <li><a href="view_cart">Cart</a></li>
                                 <li><a href="View_confirm_order">Booking</a></li>
                             </ul>
