--- a/Ration1/templates/Delivery/base.html
+++ b/Ration1/templates/Delivery/base.html
@@ -85,7 +85,7 @@
                         <li><a href="{% url 'delivery_orders' %}">Pending Delivery</a></li>
                         <li><a href="{% url 'delivery_notification' %}">My Delivery</a></li>
                         <li><a href="{% url 'map' %}">MAP</a></li>
-                        <li><a href="{% url 'delivery_history' %}">Histroy</a></li>
+                        <li><a href="{% url 'delivery_history' %}">History</a></li>
                     </ul>
                 </nav>
     </div>
